--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,18 +1,6 @@
-#bg {
-  position: fixed; 
-  top: 10px; 
-  left: 0px;     
-  min-width: 100%;
-  min-height: 100%;
-  max-width: 100%;
-  min-width: 100%;
-}
-
-body {
-  text-align: center;
-  width: 100%;
-  margin: 0px auto;
-  overflow-x: scroll;
+.bg1 
+{
+  background-image: url(http://i.imgur.com/KZLmEBX.png);
 }
 
 #sayer {
@@ -39,3 +27,9 @@ body {
   font-weight: bold;
   background: rgba(255, 120, 49, 0);
 }
+
+body {
+  text-align: center;
+  width: 100%;
+  margin: 0px auto;
+  overflow-x: scroll;
